// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildDiscordMessageContextPrompt > builds a DM prompt with stable Discord metadata 1`] = `
"<discord_message_context>
{
  "scope": "dm",
  "sent_at": "2026-05-07T04:30:00.000Z",
  "sent_at_local": "Thu, 7 May 26, 14:30 AEST",
  "message_id": "message-123",
  "author_name": "Alice",
  "author_id": "user-456"
}
</discord_message_context>

User message:
Hello there"
`;

exports[`buildDiscordMessageContextPrompt > builds a thread prompt with thread metadata 1`] = `
"<discord_message_context>
{
  "scope": "thread",
  "sent_at": "2026-05-07T04:31:00.000Z",
  "sent_at_local": "Thu, 7 May 26, 14:31 AEST",
  "message_id": "message-789",
  "author_name": "Alice",
  "author_id": "user-456",
  "thread_title": "Fix deploy bug",
  "thread_id": "thread-123",
  "forum_channel_id": "forum-999"
}
</discord_message_context>

User message:
Can you check this?"
`;

exports[`buildDiscordMessageContextPrompt > normalizes user-controlled metadata whitespace 1`] = `
"<discord_message_context>
{
  "scope": "thread",
  "message_id": "message-789",
  "author_name": "Alice Admin",
  "author_id": "user-456",
  "thread_title": "Fix Deploy Bug"
}
</discord_message_context>

User message:
Body"
`;

exports[`formatDiscordPromptTime > formats time with custom timezone and locale 1`] = `"24年12月26日(木) 03:45 JST"`;

exports[`formatDiscordPromptTime > formats time with default options (UTC, en-AU) 1`] = `"Sat, 15 June 24, 10:30 UTC"`;
